--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,7 +240,7 @@ template {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: 95vh;
   background-color: #1DB9C3;
   margin: 0 auto;
 }
@@ -249,26 +249,31 @@ template {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .imgContainer {
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  width: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 91%;
   height: 400px;
+  -webkit-transform: rotate(7deg);
+          transform: rotate(7deg);
   background-color: #C32BAD;
 }
 
 .gameInfo {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
   color: #fff;
   font-family: "Rubik Mono One", sans-serif;
-  width: 32%;
-  justify-self: flex-end;
+  width: 81%;
+  margin-right: -2 rem;
 }
 .gameInfo h2 {
   font-weight: normal;
@@ -278,9 +283,23 @@ template {
 }
 
 form {
-  margin-top: 13rem;
+  margin-top: 2.5rem;
   -ms-flex-item-align: center;
       align-self: center;
+}
+
+select {
+  background-color: #7027A0;
+  color: white;
+  padding: 0.3rem;
+}
+
+button {
+  border: none;
+  width: 4rem;
+  color: white;
+  background-color: #F56FAD;
+  padding: 0.35rem;
 }
 
 html {
@@ -304,4 +323,15 @@ li {
 ul {
   padding: 0;
   margin: 0;
+}
+
+footer {
+  width: 100%;
+  height: 5vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
