--- a/styles/styles.css
+++ b/styles/styles.css
@@ -253,6 +253,7 @@ template {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
 }
 
 .imgContainer {
@@ -267,6 +268,16 @@ template {
   -webkit-transform: rotate(7deg);
           transform: rotate(7deg);
   background-color: #C32BAD;
+  z-index: 2;
+}
+
+.offsetBG {
+  position: absolute;
+  width: 91%;
+  height: 100%;
+  background-color: #F56FAD;
+  -webkit-transform: rotate(365deg);
+          transform: rotate(365deg);
 }
 
 .gameInfo {
