added logo animation, some comments in css, spacing in gameInfo section, fixed some HTML structure

--- a/styles/sass/_landingPage.scss
+++ b/styles/sass/_landingPage.scss
@@ -7,6 +7,9 @@
   margin: 0 auto;
 }
 
+
+////////////////////////////// logo container
+
 .headingContainer {
    display: flex;
    flex-direction: column;
@@ -21,7 +24,7 @@
   height: 400px;
   transform: rotate(7deg);
   background-color: $secondaryBackground;
-  z-index: 2;
+  z-index: 3;
 }
 
 .offsetBG {
@@ -30,8 +33,43 @@
   height: 100%;
   background-color: $secondaryAccent;
   transform: rotate(365deg);
+  z-index: 2;
+  animation-name: sway;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
 }
 
+.offsetBGTwo {
+  position: absolute;
+  width: 91%;
+  height: 100%;
+  background-color: white;
+  transform: rotate(363deg);
+  animation-name: swayTwo;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-delay: 0.1s;
+}
+
+//////////////////////offset animation
+
+
+
+@keyframes sway {
+  0%   {transform: rotate(365deg)}
+  50%  {transform: rotate(369deg)}
+  100% {transform: rotate(365deg)}
+}
+
+@keyframes swayTwo {
+  0%   {transform: rotate(363deg)}
+  50%  {transform: rotate(371deg)}
+  100% {transform: rotate(363deg)}
+}
+
+
+
+///////////game info section
 
 
 .gameInfo {
@@ -46,6 +84,7 @@
 
   li {
     padding: 1rem 0;
+    margin-top: 1rem;
   }
 
   ul > li:last-child {
@@ -55,20 +94,24 @@
 
 
 
+
+/////////////////// form 
+
 form {
-  margin-top: 0.5rem;
+  margin-top: 1.5rem;
   align-self: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
 
   h2 {
-    width: 100%;
+    
     text-align: center;
     color: $fontColour;
     font-family: 'Rubik Mono One', sans-serif;
     font-weight: normal;
     font-size: 1rem;
+    margin-right: 6rem;
   }
 }
 
