Styled question and answer page, modified JS to add some classes to elements

--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -5,4 +5,8 @@ $secondaryAccent: #F56FAD;
 $fontColour: #fff;
 
 
+$answerBackground1 : #7027a0;
+$answerBackground2 : #c52bae;
+$answerBackground3: #f56fae;
+$answerBackground4: #ab3ff3;
 
