--- a/styles/styles.css
+++ b/styles/styles.css
@@ -302,6 +302,89 @@ button {
   padding: 0.35rem;
 }
 
+.questionAnswers {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.questionAnswers h2 {
+  font-weight: 400;
+}
+.questionAnswers ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+.questionAnswers ul li:hover {
+  cursor: pointer;
+  opacity: 90%;
+}
+
+.answer {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #fff;
+  border-radius: 0.5rem;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 45%;
+          flex: 0 1 45%;
+  height: 10rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 1rem 0;
+  max-width: 45%;
+  width: 15rem;
+}
+.answer p:first-of-type {
+  padding-right: 0.5rem;
+}
+
+.answer0 {
+  background-color: #7027a0;
+  -webkit-box-shadow: 5px 5px #fff;
+          box-shadow: 5px 5px #fff;
+}
+
+.answer1 {
+  background-color: #c52bae;
+  -webkit-box-shadow: -5px 5px #fff;
+          box-shadow: -5px 5px #fff;
+}
+
+.answer2 {
+  background-color: #f56fae;
+  -webkit-box-shadow: 5px 5px #fff;
+          box-shadow: 5px 5px #fff;
+}
+
+.answer3 {
+  background-color: #ab3ff3;
+  -webkit-box-shadow: -5px 5px #fff;
+          box-shadow: -5px 5px #fff;
+}
+
+.modalText {
+  text-align: center;
+}
+
 html {
   font-size: 125%;
 }
@@ -334,4 +417,9 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+main {
+  color: #fff;
+  font-family: "Rubik Mono One", sans-serif;
 }
