Changed answer margin for mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -556,6 +556,7 @@ button {
         -ms-flex: 0 1 auto;
             flex: 0 1 auto;
     height: unset;
+    margin: 0.3rem 0;
     max-width: 100%;
   }
 
