--- a/styles/styles.css
+++ b/styles/styles.css
@@ -515,23 +515,45 @@ button {
           box-shadow: -5px 5px #fff;
 }
 
+.endGameModal {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #c32bac85;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100vh;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 20%;
+  width: 100%;
+  z-index: 5;
+}
+
 .modalText {
   text-align: center;
+}
+.modalText a {
+  color: #fff;
 }
 
 .stats {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #C32BAD;
-  -webkit-box-shadow: 0px 5px #fff;
-          box-shadow: 0px 5px #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  background-color: #C32BAD;
+  -webkit-box-shadow: 0px 5px #fff;
+          box-shadow: 0px 5px #fff;
 }
 
 .topLeftLogo {
