changed positioning of end game overlay

--- a/styles/sass/_gameArea.scss
+++ b/styles/sass/_gameArea.scss
@@ -67,7 +67,7 @@
     justify-content: center;
     left: 0;
     position: absolute;
-    top: 20%;
+    top: 0;
     width: 100%;
     z-index: 5;
 }
