--- a/styles/styles.css
+++ b/styles/styles.css
@@ -529,7 +529,7 @@ button {
           justify-content: center;
   left: 0;
   position: absolute;
-  top: 20%;
+  top: 0;
   width: 100%;
   z-index: 5;
 }
