--- a/styles/sass/_landingPage.scss
+++ b/styles/sass/_landingPage.scss
@@ -25,7 +25,7 @@
   transform: rotate(7deg);
   background-color: $secondaryBackground;
   z-index: 3;
-  border-radius: 50%;
+  border: 3px solid white;
 }
 
 .offsetBG {
@@ -38,7 +38,6 @@
   animation-name: sway;
   animation-duration: 3s;
   animation-iteration-count: infinite;
-  border-radius: 50%;
 }
 
 .offsetBGTwo {
@@ -51,7 +50,6 @@
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-delay: 0.1s;
-  border-radius: 50%;
 }
 
 //////////////////////offset animation
@@ -100,7 +98,7 @@
 
 /////////////////// form 
 
-form {
+.gameForm {
   margin-top: 1.5rem;
   align-self: center;
   display: flex;
@@ -118,7 +116,7 @@ form {
   }
 }
 
-.form-container {
+.formContainer {
   display: flex;
   justify-content: center;
 }
