--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -3,6 +3,7 @@
 @import 'normalize';
 @import 'landingPage';
 @import 'gameArea';
+@import 'mediaQueries';
 
 
 
@@ -31,9 +32,7 @@ ul {
 
 footer {
   width: 100%;
-  height: 5vh;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 main {
