--- a/styles/styles.css
+++ b/styles/styles.css
@@ -269,7 +269,7 @@ template {
           transform: rotate(7deg);
   background-color: #C32BAD;
   z-index: 3;
-  border-radius: 50%;
+  border: 3px solid white;
 }
 
 .offsetBG {
@@ -286,7 +286,6 @@ template {
           animation-duration: 3s;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  border-radius: 50%;
 }
 
 .offsetBGTwo {
@@ -304,7 +303,6 @@ template {
           animation-iteration-count: infinite;
   -webkit-animation-delay: 0.1s;
           animation-delay: 0.1s;
-  border-radius: 50%;
 }
 
 @-webkit-keyframes sway {
@@ -381,7 +379,7 @@ template {
   margin-left: 3rem;
 }
 
-form {
+.gameForm {
   margin-top: 1.5rem;
   -ms-flex-item-align: center;
       align-self: center;
@@ -396,7 +394,7 @@ form {
       -ms-flex-pack: center;
           justify-content: center;
 }
-form h2 {
+.gameForm h2 {
   text-align: center;
   color: #fff;
   font-family: "Rubik Mono One", sans-serif;
@@ -405,7 +403,7 @@ form h2 {
   margin-right: 6rem;
 }
 
-.form-container {
+.formContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -593,6 +591,99 @@ button {
     margin: 2rem 0;
   }
 }
+@media (max-width: 1400px) {
+  .gameInfo > ul > li:nth-child(2) {
+    margin-left: 0;
+  }
+}
+@media (max-width: 1000px) {
+  .headingContainer {
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+
+  .imgContainer,
+.offsetBG,
+.offsetBGTwo {
+    width: 100%;
+  }
+
+  .gameSetup {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .gameInfo h2 {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 1.5rem;
+  }
+
+  .gameInfo li {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    font-size: 0.9rem;
+  }
+
+  .formContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .gameForm {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 0.5rem;
+  }
+  .gameForm h2 {
+    margin-right: 0;
+  }
+
+  .formContainer > * {
+    width: 80%;
+    padding: 0.8rem;
+  }
+}
+@media (max-width: 768px) {
+  .headingContainer img {
+    -webkit-transform: scale(0.6);
+            transform: scale(0.6);
+  }
+
+  .gameSetup {
+    margin-top: -5%;
+  }
+
+  .gameInfo {
+    margin: 0;
+    width: 100%;
+  }
+
+  .gameForm {
+    margin-top: 0;
+    width: 100%;
+  }
+  .gameForm h2 {
+    font-size: 1rem;
+  }
+
+  .formContainer > * {
+    width: 100%;
+  }
+}
 html {
   font-size: 125%;
 }
@@ -618,13 +709,7 @@ ul {
 
 footer {
   width: 100%;
-  height: 5vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  text-align: center;
 }
 
 main {
