--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -6,7 +6,10 @@
 @media(max-width: 1400px) {
   .gameInfo > ul > li:nth-child(2) {
     margin-left: 0;
-    
+  }
+
+  .loadingScreen {
+    font-size: 2rem;
   }
 }
 
@@ -15,8 +18,6 @@
   .headingContainer {
     transform: scale(0.7);
   }
-
-  
 
   .imgContainer,
   .offsetBG,
@@ -40,7 +41,6 @@
     margin-bottom: 0;
     padding-bottom: 0;
     font-size: 0.9rem;
-    
   }
   
   
@@ -68,6 +68,11 @@
 @media(max-width:768px) {
   .headingContainer img {
     transform: scale(0.6);
+  }
+
+   .loadingScreen {
+    font-size: 1rem;
+    margin-left: 2rem;
   }
 
   .gameSetup {
