set prefers-reduced-motion media query to stop animations if triggered

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -1,5 +1,9 @@
-@media (prefers-reduced-motion: no-preference) {
-  // change this so that animation not shown if not preferred
+@media (prefers-reduced-motion: reduce) {
+  // don't show animations
+  .offsetBG,
+  .offsetBGTwo {
+    animation-duration: 0s;
+  }
 }
 
 
