fixed a height problem with mobile media query

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -69,7 +69,11 @@
   }
 }
 
-@media(max-width:768px) {
+@media(max-width: 768px) {
+  .headingContainer {
+    height: 15rem;
+  }
+  
   .headingContainer img {
     transform: scale(0.6);
   }
