--- a/styles/sass/_landingPage.scss
+++ b/styles/sass/_landingPage.scss
@@ -1,6 +1,7 @@
 .welcome {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   width: 100%;
   height: 95vh;
   background-color: $mainBackground;
