--- a/styles/styles.css
+++ b/styles/styles.css
@@ -239,6 +239,9 @@ template {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   width: 100%;
   height: 95vh;
   background-color: #1DB9C3;
@@ -687,6 +690,10 @@ button {
   }
 }
 @media (max-width: 768px) {
+  .headingContainer {
+    height: 15rem;
+  }
+
   .headingContainer img {
     -webkit-transform: scale(0.6);
             transform: scale(0.6);
