--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -11,10 +11,12 @@ html {
   font-size: 125%;
 }
 
-body {
-  max-width: 1440px;
+body { 
+  background: url(./../assets/background.jpg);
+  background-attachment: fixed;
+  background-position: center;
   margin: 0 auto;
-  background-color: $mainBackground;
+  max-width: 1440px;
 }
 
 .hidden {
@@ -30,13 +32,18 @@ li {
 }
 
 ul {
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 footer {
-  width: 100%;
+  color: #fff;
   text-align: center;
+  width: 100%;
+
+  a{
+    color: #fff;
+  }
 }
 
 main {
