Adjusted background size

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -731,6 +731,7 @@ body {
   background: url(./../assets/background.jpg);
   background-attachment: fixed;
   background-position: center;
+  background-size: cover;
   margin: 0 auto;
   max-width: 1440px;
 }
