--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -15,6 +15,7 @@ body {
   background: url(./../assets/background.jpg);
   background-attachment: fixed;
   background-position: center;
+  background-size: cover;
   margin: 0 auto;
   max-width: 1440px;
 }
